# GdylAgents

./: .dockerignore  .gitignore  1  Dockerfile  agent.py  custom_model.py  docker-compose.yml  langgraph.json  nohup.out  plus.py  pyproject.toml  ralph_agent.py  tester_agent.py
Gdylagents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research_agent/: __init__.py  prompts.py  tools.py
tester_agent/: __init__.py  prompts.py  tools.py
